option('laiin_BUILD_TESTS', type: 'boolean', value: false, 
    description: 'Build laiin tests'
)

option('laiin_BUILD_CLI', type: 'boolean', value: false, 
    description: 'Build laiin CLI'
)

option('laiin_BUILD_GUI', type: 'boolean', value: true, 
    description: 'Build laiin GUI'
)

# include(CMakeDependentOption)
# cmake_dependent_option(['laiin_USE_QT', 'Build laiin with Qt', 'ON', 'laiin_BUILD_GUI', 'OFF'])
# option(UUID_SYSTEM_GENERATOR "Enable operating system uuid generator" OFF)
# option(UUID_TIME_GENERATOR "Enable experimental time-based uuid generator" OFF)
# cmake_dependent_option(['laiin_USE_SYSTEM_SOCKETS', 'Build laiin with system sockets', 'ON', 'NOT laiin_USE_LIBZMQ;NOT laiin_USE_LIBUV', 'OFF'])
# cmake_dependent_option(['laiin_USE_LIBZMQ', 'Build laiin with LibZMQ', 'ON', 'NOT laiin_USE_LIBUV;NOT laiin_USE_SYSTEM_SOCKETS', 'OFF'])
# option(laiin_USE_GRPC "Build laiin with gRPC" OFF)
# cmake_dependent_option(['laiin_USE_SYSTEM_GRPC', 'Use system installed gRPC', 'ON', 'laiin_USE_GRPC;USE_SYSTEM_GRPC', 'OFF'])
